--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - main
     paths:
-      - !"*.yml"
+      - "**"
+      - !"**.yml"
   pull_request:
     branches:
       - main
