style: javadoc style

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
                             <goals>
                                 <goal>jar</goal>
                             </goals>
+                            <configuration>
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
