--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Get Tag Of Prerelease
         id: get_prerelease_tag
         run: |
+          echo ${{github.event.ref}}
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+.[0.9]+.[0-9]-beta+.[0-9]+$ ]]; then 
               echo "PRERELEASE=true" >> $GITHUB_ENV
           fi
