--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -2,8 +2,8 @@ name: Tag Release
 on:
   push:
     tags:
-      - "[1-9]+.[0.9]+.[0-9].RELEASE"
-      - "[1-9]+.[0.9]+.[0-9]-beta+.[0-9]"
+      - "^[1-9]+.[0.9]+.[0-9].RELEASE"
+      - "^[1-9]+.[0.9]+.[0-9]-beta+.[0-9]"
 jobs:
   release:
     runs-on: ubuntu-latest
