ci: update tag action

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -28,4 +28,4 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: ${{process.env.PRERELEASE==true}}
+          prerelease: ${{env.PRERELEASE==true}}
