--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,11 +21,11 @@ jobs:
         id: get_prerelease_tag
         run: |
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+.[0.9]+.[0-9]-beta+.[0-9]+$ ]]; then 
-              echo "PRERELEASE=true" >> $GITHUB_ENV
+              echo ":set-output name=PRERELEASE::true"
           fi
-          echo ${{env.PRERELEASE==true}}
+          echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE==true}}
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: ${{env.PRERELEASE==true}}
+          prerelease: "${{ steps.get_prerelease_tag.outputs.PRERELEASE==true }}"
