--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,7 +21,7 @@ jobs:
         id: get_prerelease_tag
         run: |
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+.[0.9]+.[0-9]-beta+.[0-9]+$ ]]; then 
-              echo ":set-output name=PRERELEASE::true"
+              echo "::set-output name=PRERELEASE::true"
           fi
           echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE==true}}
       - name: Automatic Release
