--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,6 +23,7 @@ jobs:
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+.[0.9]+.[0-9]-beta+.[0-9]+$ ]]; then 
               echo "::set-output name=PRERELEASE::true"
           fi
+           echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE }}
           echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE==true}}
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
