--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml -Dmaven.test.skip=true
       - name: Get Tag Of Prerelease
-        id: get_prerelease_tag
+        id: get-prerelease-tag
         run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+.[0.9]+.[0-9]-beta+.[0-9]+$ ]]; then 
-              echo "::set-output name=PRERELEASE::true"
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+\.[0-9]+\.[0-9]-beta\.+[0-9]+$ ]]; then
+             echo ::set-output name=PRERELEASE::true
           fi
-           echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE }}
-          echo ${{ steps.get_prerelease_tag.outputs.PRERELEASE==true}}
+           echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE }}
+          echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE==true}}
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
