--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,8 +22,11 @@ jobs:
         run: |
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+\.[0-9]+\.[0-9]-beta\.+[0-9]+$ ]]; then
              echo "::set-output name=PRERELEASE::true"
+             echo "PRERELEASE=true" >> $GITHUB_ENV
           fi
            echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE }}
+          echo "${{ env.PRERELEASE }}"
+          echo ${{ env.PRERELEASE }}
           echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE==true}}
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
