--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Get Tag Of Prerelease
         id: get-prerelease-tag
         run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+\.[0-9]+\.[0-9]-beta\.+[0-9]+$ ]]; then
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+\.[0-9]+\.[0-9]-beta\.+[0-9] ]]; then
+             echo "test"
              echo "::set-output name=PRERELEASE::true"
              echo "PRERELEASE=true" >> $GITHUB_ENV
           fi
