--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -26,7 +26,7 @@ jobs:
              echo "PRERELEASE=true" >> $GITHUB_ENV
           fi
            echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE }}
-          echo $env.PRERELEASE
+          echo $PRERELEASE
           echo $steps.get-prerelease-tag.outputs.PRERELEASE==true
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
