--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,14 +22,11 @@ jobs:
         run: |
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[1-9]+\.[0-9]+\.[0-9]-beta\.+[0-9] ]]; then
              echo "test"
-             echo "::set-output name=PRERELEASE::true"
-             echo "PRERELEASE=true" >> $GITHUB_ENV
+             echo "TAG_PRERELEASE=true" >> $GITHUB_ENV
           fi
-           echo ${{ steps.get-prerelease-tag.outputs.PRERELEASE }}
-          echo $PRERELEASE
-          echo $steps.get-prerelease-tag.outputs.PRERELEASE==true
+             echo "${{ env.TAG_PRERELEASE }}"
       - name: Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: "${{ steps.get_prerelease_tag.outputs.PRERELEASE==true }}"
+          prerelease: "${{env.TAG_PRERELEASE == true }}"
