--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                     <configuration>
                         <serverId>sonatype-nexus-snapshots</serverId>
                         <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
                     </configuration>
                 </plugin>
             </plugins>
