--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.13.3</version>
-            <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
